feat[PanamaUring] 1,Libc实现